--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,9 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <p>{{- site.description | escape -}}</p>
+	<p> Organized by <a href="https://lilygoli.github.io/">Lily Goli</a> and <a href="https://sherwinbahmani.github.io/">Sherwin Bahmani</a> </p>
       </div>
+       
       <div class="footer-col footer-col-2">
         <ul class="contact-list">
             {%- if site.email -%}
